v10/docs/ModelsSecuritySecurityRolesSecurityRoleResponseBase.md
# ModelsSecuritySecurityRolesSecurityRoleResponseBase

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Name** | Pointer to **string** | The name of the created role | [optional] 
**Permissions** | Pointer to **[]string** | The permissions included in the created security role | [optional] 

## Methods

### NewModelsSecuritySecurityRolesSecurityRoleResponseBase

`func NewModelsSecuritySecurityRolesSecurityRoleResponseBase() *ModelsSecuritySecurityRolesSecurityRoleResponseBase`

NewModelsSecuritySecurityRolesSecurityRoleResponseBase instantiates a new ModelsSecuritySecurityRolesSecurityRoleResponseBase object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsSecuritySecurityRolesSecurityRoleResponseBaseWithDefaults

`func NewModelsSecuritySecurityRolesSecurityRoleResponseBaseWithDefaults() *ModelsSecuritySecurityRolesSecurityRoleResponseBase`

NewModelsSecuritySecurityRolesSecurityRoleResponseBaseWithDefaults instantiates a new ModelsSecuritySecurityRolesSecurityRoleResponseBase object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetName

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) GetName() string`

GetName returns the Name field if non-nil, zero value otherwise.

### GetNameOk

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) GetNameOk() (*string, bool)`

GetNameOk returns a tuple with the Name field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetName

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) SetName(v string)`

SetName sets Name field to given value.

### HasName

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) HasName() bool`

HasName returns a boolean if a field has been set.

### GetPermissions

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) GetPermissions() []string`

GetPermissions returns the Permissions field if non-nil, zero value otherwise.

### GetPermissionsOk

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) GetPermissionsOk() (*[]string, bool)`

GetPermissionsOk returns a tuple with the Permissions field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetPermissions

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) SetPermissions(v []string)`

SetPermissions sets Permissions field to given value.

### HasPermissions

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) HasPermissions() bool`

HasPermissions returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


