v11/docs/ModelsSecuritySecurityRolesSecurityRoleResponseBase.md
# ModelsSecuritySecurityRolesSecurityRoleResponseBase

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Name** | Pointer to **NullableString** |  | [optional] 
**Permissions** | Pointer to **[]string** |  | [optional] 

## Methods

### NewModelsSecuritySecurityRolesSecurityRoleResponseBase

`func NewModelsSecuritySecurityRolesSecurityRoleResponseBase() *ModelsSecuritySecurityRolesSecurityRoleResponseBase`

NewModelsSecuritySecurityRolesSecurityRoleResponseBase instantiates a new ModelsSecuritySecurityRolesSecurityRoleResponseBase object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsSecuritySecurityRolesSecurityRoleResponseBaseWithDefaults

`func NewModelsSecuritySecurityRolesSecurityRoleResponseBaseWithDefaults() *ModelsSecuritySecurityRolesSecurityRoleResponseBase`

NewModelsSecuritySecurityRolesSecurityRoleResponseBaseWithDefaults instantiates a new ModelsSecuritySecurityRolesSecurityRoleResponseBase object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetName

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) GetName() string`

GetName returns the Name field if non-nil, zero value otherwise.

### GetNameOk

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) GetNameOk() (*string, bool)`

GetNameOk returns a tuple with the Name field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetName

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) SetName(v string)`

SetName sets Name field to given value.

### HasName

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) HasName() bool`

HasName returns a boolean if a field has been set.

### SetNameNil

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) SetNameNil(b bool)`

 SetNameNil sets the value for Name to be an explicit nil

### UnsetName
`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) UnsetName()`

UnsetName ensures that no value is present for Name, not even an explicit nil
### GetPermissions

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) GetPermissions() []string`

GetPermissions returns the Permissions field if non-nil, zero value otherwise.

### GetPermissionsOk

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) GetPermissionsOk() (*[]string, bool)`

GetPermissionsOk returns a tuple with the Permissions field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetPermissions

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) SetPermissions(v []string)`

SetPermissions sets Permissions field to given value.

### HasPermissions

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) HasPermissions() bool`

HasPermissions returns a boolean if a field has been set.

### SetPermissionsNil

`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) SetPermissionsNil(b bool)`

 SetPermissionsNil sets the value for Permissions to be an explicit nil

### UnsetPermissions
`func (o *ModelsSecuritySecurityRolesSecurityRoleResponseBase) UnsetPermissions()`

UnsetPermissions ensures that no value is present for Permissions, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


